added to lit review

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -21,6 +21,18 @@
  year = {1974}
 }
 
+@inproceedings{Ahmed2017,
+ author = {Ahmed, H. Bay and Dare, D. and Boudraa, A.O.},
+ booktitle = {2017 IEEE Global Conference on Signal and Information Processing (GlobalSIP)},
+ doi = {10.1109/GlobalSIP.2017.8309043},
+ number = {},
+ pages = {667-671},
+ title = {Graph signals classification using total variation and graph energy informations},
+ url = {https://doi.org/10.1109/GlobalSIP.2017.8309043},
+ volume = {},
+ year = {2017}
+}
+
 @article{Antonian2023,
  author = {Antonian, Edward and Peters, Gareth W.  and Chantler, Michael },
  doi = {10.21105/joss.04900},
@@ -315,6 +327,19 @@ and Li, Xuelong},
  year = {1971}
 }
 
+@article{Cheng2021,
+ author = {Cheng, Rui and Li, Qing},
+ doi = {10.1609/aaai.v35i1.16077},
+ journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+ month = {May},
+ number = {1},
+ pages = {55-62},
+ title = {Modeling the Momentum Spillover Effect for Stock Prediction via Attribute-Driven Graph Attention Networks},
+ url = {https://doi.org/10.1609/aaai.v35i1.16077},
+ volume = {35},
+ year = {2021}
+}
+
 @article{Chi2022,
  author = {Chi, Yuan and Jiang, Junzheng and Zhou, Fang and Xu, Shuwen},
  doi = {10.1007/s00034-021-01930-3},
@@ -517,6 +542,30 @@ and Frossard, Pascal},
  year = {2015}
 }
 
+@article{Dong2016,
+ author = {Dong, Xiaowen and Thanou, Dorina and Frossard, Pascal and Vandergheynst, Pierre},
+ doi = {10.1109/TSP.2016.2602809},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {23},
+ pages = {6160-6173},
+ title = {Learning Laplacian Matrix in Smooth Graph Signal Representations},
+ url = {https://doi.org/10.1109/TSP.2016.2602809},
+ volume = {64},
+ year = {2016}
+}
+
+@article{Dong2019,
+ author = {Dong, Xiaowen and Thanou, Dorina and Rabbat, Michael and Frossard, Pascal},
+ doi = {10.1109/MSP.2018.2887284},
+ journal = {IEEE Signal Processing Magazine},
+ number = {3},
+ pages = {44-63},
+ title = {Learning Graphs From Data: A Signal Representation Perspective},
+ url = {https://doi.org/10.1109/MSP.2018.2887284},
+ volume = {36},
+ year = {2019}
+}
+
 @article{Donoho2003,
  author = {Donoho, David L.  and Grimes, Carrie},
  doi = {10.1073/pnas.1031596100},
@@ -598,6 +647,19 @@ and Frossard, Pascal},
  year = {2020}
 }
 
+@article{Fanuel2017,
+ author = {Fanuel, Michaël and Ala{\'{\i}}z, Carlos M. and Suykens, Johan A. K.},
+ doi = {10.1103/physreve.95.022302},
+ journal = {Physical Review E},
+ month = {February},
+ number = {2},
+ publisher = {American Physical Society ({APS})},
+ title = {Magnetic eigenmaps for community detection in directed networks},
+ url = {https://doi.org/10.1103/physreve.95.022302},
+ volume = {95},
+ year = {2017}
+}
+
 @article{Fiedler1973,
  author = {Fiedler, Miroslav},
  doi = {10.21136/CMJ.1973.101168},
@@ -642,6 +704,20 @@ and Frossard, Pascal},
  year = {2023}
 }
 
+@article{Friedman2007,
+ author = {Friedman, J. and Hastie, T. and Tibshirani, R.},
+ doi = {10.1093/biostatistics/kxm045},
+ journal = {Biostatistics},
+ month = {December},
+ number = {3},
+ pages = {432--441},
+ publisher = {Oxford University Press ({OUP})},
+ title = {Sparse inverse covariance estimation with the graphical lasso},
+ url = {https://doi.org/10.1093/biostatistics/kxm045},
+ volume = {9},
+ year = {2007}
+}
+
 @inproceedings{Furutani2020,
  address = {Cham},
  author = {Furutani, Satoshi
@@ -677,6 +753,24 @@ parameters},
  url = {https://doi.org/10.1007/s10589-010-9329-3},
  volume = {51},
  year = {2012}
+}
+
+@article{Gao2021,
+ address = {New York, NY, USA},
+ articleno = {4},
+ author = {Gao, Jianliang and Ying, Xiaoting and Xu, Cong and Wang, Jianxin and Zhang, Shichao and Li, Zhao},
+ doi = {10.1145/3451397},
+ issn = {1556-4681},
+ issue_date = {February 2022},
+ journal = {ACM Trans. Knowl. Discov. Data},
+ month = {jul},
+ number = {1},
+ numpages = {21},
+ publisher = {Association for Computing Machinery},
+ title = {Graph-Based Stock Recommendation by Time-Aware Relational Attention Network},
+ url = {https://doi.org/10.1145/3451397},
+ volume = {16},
+ year = {2021}
 }
 
 @article{Gerschgorin1931,
@@ -760,6 +854,19 @@ parameters},
  url = {https://doi.org/10.1145/984622.984624},
  volume = {},
  year = {2004}
+}
+
+@article{Hammond2011,
+ author = {Hammond, David K. and Vandergheynst, Pierre and Gribonval, Rémi},
+ doi = {10.1016/j.acha.2010.04.005},
+ issn = {1063-5203},
+ journal = {Applied and Computational Harmonic Analysis},
+ number = {2},
+ pages = {129-150},
+ title = {Wavelets on graphs via spectral graph theory},
+ url = {https://doi.org/10.1016/j.acha.2010.04.005},
+ volume = {30},
+ year = {2011}
 }
 
 @article{Harris2020,
@@ -890,6 +997,20 @@ https://doi.org/10.1137/0117062},
  title = {Matrix Analysis},
  url = {https://doi.org/10.1017/CBO9781139020411},
  year = {2012}
+}
+
+@article{Hu2015,
+ author = {Hu, Chenhui AND Cheng, Lin AND Sepulcre, Jorge AND Johnson, Keith A. AND Fakhri, Georges E. AND Lu, Yue M. AND Li, Quanzheng},
+ doi = {10.1371/journal.pone.0128136},
+ journal = {PLOS ONE},
+ month = {05},
+ number = {5},
+ pages = {1-24},
+ publisher = {Public Library of Science},
+ title = {A Spectral Graph Regression Model for Learning Brain Connectivity of Alzheimer’s Disease},
+ url = {https://doi.org/10.1371/journal.pone.0128136},
+ volume = {10},
+ year = {2015}
 }
 
 @article{Huang2016,
@@ -1043,6 +1164,15 @@ https://doi.org/10.1137/0117062},
  year = {2012}
 }
 
+@misc{Kalofolias2016,
+ archiveprefix = {arXiv},
+ author = {Kalofolias, Vassilis},
+ eprint = {1601.02513},
+ primaryclass = {stat.ML},
+ title = {How to learn a graph from smooth signals},
+ year = {2016}
+}
+
 @article{Kaveh2011,
  author = {Kaveh, Ali and Alinejad, Babak},
  doi = {10.1007/S00707-011-0540-9},
@@ -1101,6 +1231,15 @@ Vijay and Riley, Patrick},
  year = {2000}
 }
 
+@book{Kolaczyk2009,
+ author = {Kolaczyk, Eric D.},
+ doi = {10.1007/978-0-387-88146-1},
+ publisher = {Springer New York},
+ title = {Statistical Analysis of Network Data},
+ url = {https://doi.org/10.1007/978-0-387-88146-1},
+ year = {2009}
+}
+
 @article{Kolda2009,
  author = {Kolda, Tamara G. and Bader, Brett W.},
  doi = {10.1137/07070111X},
@@ -1147,6 +1286,14 @@ https://doi.org/10.1137/07070111X},
  year = {2008}
 }
 
+@inproceedings{Lake2010,
+ author = {Lake, Brenden and Tenenbaum, J. B.},
+ booktitle = {Proceedings of the 32nd Annual Conference of the Cognitive Science Society},
+ language = {English (US)},
+ title = {Discovering Structure by Learning Sparse Graphs},
+ year = {2010}
+}
+
 @article{Le2022,
  author = {Le, Can M. and Li, Tianxi},
  doi = {10.1111/rssb.12554},
@@ -1175,6 +1322,18 @@ https://doi.org/10.1137/07070111X},
  url = {https://doi.org/10.1109/ICASSP.2016.7472591},
  urldate = {2023-02-07},
  year = {2016}
+}
+
+@article{Leus2023,
+ author = {Leus, Geert and Marques, Antonio G. and Moura, José M.F. and Ortega, Antonio and Shuman, David I},
+ doi = {10.1109/MSP.2023.3262906},
+ journal = {IEEE Signal Processing Magazine},
+ number = {4},
+ pages = {49-60},
+ title = {Graph Signal Processing: History, development, impact, and outlook},
+ url = {https://doi.org/10.1109/MSP.2023.3262906},
+ volume = {40},
+ year = {2023}
 }
 
 @article{Li2012,
@@ -1258,6 +1417,18 @@ https://doi.org/10.1137/07070111X},
  year = {1980}
 }
 
+@article{Marques2020,
+ author = {Marques, Antonio G. and Segarra, Santiago and Mateos, Gonzalo},
+ doi = {10.1109/MSP.2020.3014597},
+ journal = {IEEE Signal Processing Magazine},
+ number = {6},
+ pages = {99-116},
+ title = {Signal Processing on Directed Graphs: The Role of Edge Directionality When Processing and Learning From Network Data},
+ url = {https://doi.org/10.1109/MSP.2020.3014597},
+ volume = {37},
+ year = {2020}
+}
+
 @inbook{Marti2021,
  address = {Cham},
  author = {Marti, Gautier
@@ -1284,6 +1455,27 @@ Application to Evaluating Segmentation Algorithms and
 Measuring Ecological Statistics},
  volume = {2},
  year = {2001}
+}
+
+@book{Mason2002,
+ author = {Mason, J.C. and Handscomb, D.C.},
+ isbn = {9781420036114},
+ publisher = {CRC Press},
+ title = {Chebyshev Polynomials},
+ url = {https://books.google.co.uk/books?id=8FHf0P3to0UC},
+ year = {2002}
+}
+
+@article{Mateos2019,
+ author = {Mateos, Gonzalo and Segarra, Santiago and Marques, Antonio G. and Ribeiro, Alejandro},
+ doi = {10.1109/MSP.2018.2890143},
+ journal = {IEEE Signal Processing Magazine},
+ number = {3},
+ pages = {16-43},
+ title = {Connecting the Dots: Identifying Network Structure via Graph Signal Processing},
+ url = {https://doi.org/10.1109/MSP.2018.2890143},
+ volume = {36},
+ year = {2019}
 }
 
 @inproceedings{Menoret2017,
@@ -1507,6 +1699,18 @@ green bond instrument returns},
  year = {2008}
 }
 
+@article{Qiao2018,
+ author = {Qiao, Lishan and Zhang, Limei and Chen, Songcan and Shen, Dinggang},
+ doi = {https://doi.org/10.1016/j.neucom.2018.05.084},
+ issn = {0925-2312},
+ journal = {Neurocomputing},
+ pages = {336-351},
+ title = {Data-driven graph construction and graph learning: A review},
+ url = {https://doi.org/https://doi.org/10.1016/j.neucom.2018.05.084},
+ volume = {312},
+ year = {2018}
+}
+
 @article{Qiu2017,
  author = {Qiu, Kai and Mao, Xianghui and Shen, Xinyue and Wang, Xiaohan and Li, Tiejian and Gu, Yuantao},
  doi = {10.1109/JSTSP.2017.2726969},
@@ -1668,6 +1872,27 @@ green bond instrument returns},
  year = {2013}
 }
 
+@inproceedings{Sandryhaila2013a,
+ author = {Sandryhaila, Aliaksei and Moura, José M. F.},
+ booktitle = {2013 IEEE Global Conference on Signal and Information Processing},
+ doi = {10.1109/GlobalSIP.2013.6736923},
+ number = {},
+ pages = {495-498},
+ title = {Classification via regularization on graphs},
+ url = {https://doi.org/10.1109/GlobalSIP.2013.6736923},
+ volume = {},
+ year = {2013}
+}
+
+@misc{Sandryhaila2013b,
+ archiveprefix = {arXiv},
+ author = {Sandryhaila, Aliaksei and Moura, Jose M. F.},
+ eprint = {1307.0468},
+ primaryclass = {cs.SI},
+ title = {Discrete Signal Processing on Graphs: Frequency Analysis},
+ year = {2013}
+}
+
 @article{Sardellitti2017,
  author = {Sardellitti, Stefania and Barbarossa, Sergio and Lorenzo, Paolo Di},
  doi = {10.1109/JSTSP.2017.2726979},
@@ -1715,6 +1940,20 @@ green bond instrument returns},
  year = {2019}
 }
 
+@article{Shubin1994,
+ author = {Shubin, M. A.},
+ doi = {10.1007/bf02101702},
+ journal = {Communications in Mathematical Physics},
+ month = {August},
+ number = {2},
+ pages = {259--275},
+ publisher = {Springer Science and Business Media {LLC}},
+ title = {Discrete Magnetic Laplacian},
+ url = {https://doi.org/10.1007/bf02101702},
+ volume = {164},
+ year = {1994}
+}
+
 @article{Shuman2013,
  author = {Shuman, David I and Narang, Sunil K. and Frossard, Pascal and Ortega, Antonio and Vandergheynst, Pierre},
  doi = {10.1109/MSP.2012.2235192},
@@ -1725,6 +1964,18 @@ green bond instrument returns},
  url = {https://doi.org/10.1109/MSP.2012.2235192},
  volume = {30},
  year = {2013}
+}
+
+@article{Shuman2018,
+ author = {Shuman, David I and Vandergheynst, Pierre and Kressner, Daniel and Frossard, Pascal},
+ doi = {10.1109/TSIPN.2018.2824239},
+ journal = {IEEE Transactions on Signal and Information Processing over Networks},
+ number = {4},
+ pages = {736-751},
+ title = {Distributed Signal Processing via Chebyshev Polynomial Approximation},
+ url = {https://doi.org/10.1109/TSIPN.2018.2824239},
+ volume = {4},
+ year = {2018}
 }
 
 @book{Smilde2004,
@@ -1933,6 +2184,18 @@ and Warmuth, Manfred K.},
  url = {https://doi.org/10.1109/SSP.2005.1628777},
  volume = {},
  year = {2005}
+}
+
+@inproceedings{Wagner2006,
+ author = {Wagner, R.S. and Baraniuk, R.G. and Du, S. and Johnson, D.B. and Cohen, A.},
+ booktitle = {2006 5th International Conference on Information Processing in Sensor Networks},
+ doi = {10.1145/1127777.1127816},
+ number = {},
+ pages = {243-250},
+ title = {An architecture for distributed wavelet analysis and processing in sensor networks},
+ url = {https://doi.org/10.1145/1127777.1127816},
+ volume = {},
+ year = {2006}
 }
 
 @article{Wang2015,
@@ -2191,8 +2454,3 @@ multilayer complex systems},
  volume = {},
  year = {2012}
 }
-
-
-
-  
-
