--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -49,6 +49,7 @@
 \newcommand{\Q}{\mathbf{Q}}
 \newcommand{\RR}{\mathbf{R}}
 \newcommand{\Ss}{\mathbf{S}}
+\newcommand{\T}{\mathbf{T}}
 \newcommand{\U}{\mathbf{U}}
 \newcommand{\V}{\mathbf{V}}
 \newcommand{\W}{\mathbf{W}}
