--- a/Thesis.cls
+++ b/Thesis.cls
@@ -183,7 +183,7 @@
 
 \thesistitle{Bayesian Reconsruction and Regression with Multivariate Graph Signals} % Your thesis title - this is used in the title and abstract
 %---------------------------------   
-\supervisor{Prof. Mike \textsc{Chantler} \& Prof. Gareth W. \textsc{Peters}} % You supervisor's name - this is used in the title page
+\supervisor{Prof. Mike \textsc{Chantler} \& \\ Prof. Gareth W. \textsc{Peters}} % You supervisor's name - this is used in the title page
 %---------------------------------   
 \examiner{} % Your examiner's name - this is not currently used anywhere in the template, cite it with \examname if you want it
 %---------------------------------   
