updated lit review

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -33,6 +33,18 @@
  year = {2017}
 }
 
+@article{Anis2016,
+ author = {Anis, Aamir and Gadde, Akshay and Ortega, Antonio},
+ doi = {10.1109/TSP.2016.2546233},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {14},
+ pages = {3775-3789},
+ title = {Efficient Sampling Set Selection for Bandlimited Graph Signals Using Graph Spectral Proxies},
+ url = {https://doi.org/10.1109/TSP.2016.2546233},
+ volume = {64},
+ year = {2016}
+}
+
 @article{Antonian2023,
  author = {Antonian, Edward and Peters, Gareth W.  and Chantler, Michael },
  doi = {10.21105/joss.04900},
@@ -739,6 +751,18 @@ and Robardet, C{\'e}line},
  year = {2020}
 }
 
+@inproceedings{Gadde2015,
+ author = {Gadde, Akshay and Ortega, Antonio},
+ booktitle = {2015 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+ doi = {10.1109/ICASSP.2015.7178573},
+ number = {},
+ pages = {3257-3261},
+ title = {A probabilistic interpretation of sampling theory of graph signals},
+ url = {https://doi.org/10.1109/ICASSP.2015.7178573},
+ volume = {},
+ year = {2015}
+}
+
 @article{Gao2012,
  author = {Gao, Fuchang and Han, Lixing},
  doi = {10.1007/s10589-010-9329-3},
@@ -781,6 +805,18 @@ parameters},
  title = {Uber die Abgrenzung der Eigenwerte einer Matrix},
  volume = {7},
  year = {1931}
+}
+
+@article{Giraldo2022,
+ author = {Giraldo, Jhony H. and Mahmood, Arif and Garcia-Garcia, Belmar and Thanou, Dorina and Bouwmans, Thierry},
+ doi = {10.1109/TSIPN.2022.3156886},
+ journal = {IEEE Transactions on Signal and Information Processing over Networks},
+ number = {},
+ pages = {201-214},
+ title = {Reconstruction of Time-Varying Graph Signals via Sobolev Smoothness},
+ url = {https://doi.org/10.1109/TSIPN.2022.3156886},
+ volume = {8},
+ year = {2022}
 }
 
 @inproceedings{Goldsberry2017,
@@ -1073,6 +1109,30 @@ https://doi.org/10.1137/0117062},
  title = {Product Graphs: Structure and Recognition},
  url = {https://books.google.co.uk/books?id=EOnuAAAAMAAJ},
  year = {2000}
+}
+
+@inproceedings{Ioannidis2016,
+ author = {Ioannidis, Vassilis N. and Romero, Daniel and Giannakis, Georgios B.},
+ booktitle = {2016 50th Asilomar Conference on Signals, Systems and Computers},
+ doi = {10.1109/ACSSC.2016.7869700},
+ number = {},
+ pages = {1829-1833},
+ title = {Kernel-based reconstruction of space-time functions via extended graphs},
+ url = {https://doi.org/10.1109/ACSSC.2016.7869700},
+ volume = {},
+ year = {2016}
+}
+
+@article{Ioannidis2018,
+ author = {Ioannidis, Vassilis N. and Romero, Daniel and Giannakis, Georgios B.},
+ doi = {10.1109/TSP.2018.2827328},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {12},
+ pages = {3228-3239},
+ title = {Inference of Spatio-Temporal Functions Over Graphs via Multikernel Kriged Kalman Filtering},
+ url = {https://doi.org/10.1109/TSP.2018.2827328},
+ volume = {66},
+ year = {2018}
 }
 
 @article{Isufi2017,
@@ -1545,6 +1605,30 @@ Measuring Ecological Statistics},
  year = {2012}
 }
 
+@inproceedings{Narang2013,
+ author = {Narang, Sunil K and Gadde, Akshay and Ortega, Antonio},
+ booktitle = {2013 IEEE International Conference on Acoustics, Speech and Signal Processing},
+ doi = {10.1109/ICASSP.2013.6638704},
+ number = {},
+ pages = {5445-5449},
+ title = {Signal processing techniques for interpolation in graph structured data},
+ url = {https://doi.org/10.1109/ICASSP.2013.6638704},
+ volume = {},
+ year = {2013}
+}
+
+@inproceedings{Narang2013b,
+ author = {Narang, Sunil K and Gadde, Akshay and Ortega, Antonio},
+ booktitle = {2013 IEEE International Conference on Acoustics, Speech and Signal Processing},
+ doi = {10.1109/ICASSP.2013.6638704},
+ number = {},
+ pages = {5445-5449},
+ title = {Signal processing techniques for interpolation in graph structured data},
+ url = {https://doi.org/10.1109/ICASSP.2013.6638704},
+ volume = {},
+ year = {2013}
+}
+
 @article{Nelder1972,
  author = {Nelder, J. A. and Wedderburn, R. W. M. },
  issn = {00359238},
@@ -1646,6 +1730,18 @@ Measuring Ecological Statistics},
  url = {https://doi.org/10.1090/s0025-5718-1973-0395196-6},
  volume = {27},
  year = {1973}
+}
+
+@article{Perraudin2017,
+ author = {Perraudin, Nathanaël and Vandergheynst, Pierre},
+ doi = {10.1109/TSP.2017.2690388},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {13},
+ pages = {3462-3477},
+ title = {Stationary Signal Processing on Graphs},
+ url = {https://doi.org/10.1109/TSP.2017.2690388},
+ volume = {65},
+ year = {2017}
 }
 
 @article{Peters2022,
@@ -1811,6 +1907,30 @@ green bond instrument returns},
  title = {Monte Carlo Statistical Methods},
  url = {https://doi.org/10.1198/tech.2005.s272},
  year = {1999}
+}
+
+@article{Romero2017,
+ author = {Romero, Daniel and Ioannidis, Vassilis N. and Giannakis, Georgios B.},
+ doi = {10.1109/JSTSP.2017.2726976},
+ journal = {IEEE Journal of Selected Topics in Signal Processing},
+ number = {6},
+ pages = {856-869},
+ title = {Kernel-Based Reconstruction of Space-Time Functions on Dynamic Graphs},
+ url = {https://doi.org/10.1109/JSTSP.2017.2726976},
+ volume = {11},
+ year = {2017}
+}
+
+@article{Romero2017b,
+ author = {Romero, Daniel and Ma, Meng and Giannakis, Georgios B.},
+ doi = {10.1109/TSP.2016.2620116},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {3},
+ pages = {764-778},
+ title = {Kernel-Based Reconstruction of Graph Signals},
+ url = {https://doi.org/10.1109/TSP.2016.2620116},
+ volume = {65},
+ year = {2017}
 }
 
 @article{Roth1934,
@@ -2080,6 +2200,18 @@ and Warmuth, Manfred K.},
  year = {2007}
 }
 
+@article{Tanaka2020,
+ author = {Tanaka, Yuichi and Eldar, Yonina C. and Ortega, Antonio and Cheung, Gene},
+ doi = {10.1109/MSP.2020.3016908},
+ journal = {IEEE Signal Processing Magazine},
+ number = {6},
+ pages = {14-30},
+ title = {Sampling Signals on Graphs: From Theory to Applications},
+ url = {https://doi.org/10.1109/MSP.2020.3016908},
+ volume = {37},
+ year = {2020}
+}
+
 @article{Tang2012,
  author = {Tang, Jok M. and Saad, Yousef},
  doi = {https://doi.org/10.1002/nla.779},
@@ -2207,6 +2339,18 @@ and Warmuth, Manfred K.},
  title = {A Distributed Tracking Algorithm for Reconstruction of Graph Signals},
  url = {https://doi.org/10.1109/JSTSP.2015.2403799},
  volume = {9},
+ year = {2015}
+}
+
+@article{Wang2015b,
+ author = {Wang, Xiaohan and Liu, Pengfei and Gu, Yuantao},
+ doi = {10.1109/TSP.2015.2411217},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {9},
+ pages = {2432-2444},
+ title = {Local-Set-Based Graph Signal Reconstruction},
+ url = {https://doi.org/10.1109/TSP.2015.2411217},
+ volume = {63},
  year = {2015}
 }
 
@@ -2427,6 +2571,19 @@ multilayer complex systems},
  title = {Bridging hydraulics and graph signal processing: A new perspective to estimate water distribution network pressures},
  url = {https://doi.org/10.1016/j.watres.2022.118416},
  volume = {217},
+ year = {2022}
+}
+
+@article{Zhou2022b,
+ author = {Zhou, Fang and Jiang, Junzheng and Tay, David B.},
+ doi = {10.1016/j.jfranklin.2022.08.059},
+ issn = {0016-0032},
+ journal = {Journal of the Franklin Institute},
+ number = {16},
+ pages = {9401-9421},
+ title = {Distributed reconstruction of time-varying graph signals via a modified Newton's method},
+ url = {https://doi.org/https://doi.org/10.1016/j.jfranklin.2022.08.059},
+ volume = {359},
  year = {2022}
 }
 
