added Cheb approx and updated lit rev

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1758,6 +1758,18 @@ green bond instrument returns},
  year = {2022}
 }
 
+@article{Pu2021,
+ author = {Pu, Xingyue and Chau, Siu Lun and Dong, Xiaowen and Sejdinovic, Dino},
+ doi = {10.1109/TSIPN.2021.3059995},
+ journal = {IEEE Transactions on Signal and Information Processing over Networks},
+ number = {},
+ pages = {192-207},
+ title = {Kernel-Based Graph Learning From Smooth Signals: A Functional Viewpoint},
+ url = {https://doi.org/10.1109/TSIPN.2021.3059995},
+ volume = {7},
+ year = {2021}
+}
+
 @article{Puschel2003,
  author = {Puschel, Markus and Moura, Jos\'{e} M. F.},
  doi = {10.1137/S009753970139272X},
@@ -1895,6 +1907,17 @@ green bond instrument returns},
  url = {https://doi.org/https://doi.org/10.1016/j.crhy.2019.08.003},
  volume = {20},
  year = {2019}
+}
+
+@book{Rivlin2020,
+ author = {Rivlin, T.J.},
+ isbn = {9780486842332},
+ lccn = {2020002214},
+ publisher = {Dover Publications},
+ series = {Dover Books on Mathematics},
+ title = {Chebyshev Polynomials},
+ url = {https://books.google.co.uk/books?id=rPLwDwAAQBAJ},
+ year = {2020}
 }
 
 @book{Robert1999,
@@ -2141,6 +2164,19 @@ and Warmuth, Manfred K.},
  title = {Fourier Transforms},
  url = {https://books.google.co.uk/books?id=jhpsLpRRerwC},
  year = {1995}
+}
+
+@inbook{Sorensen1997,
+ address = {Dordrecht},
+ author = {Sorensen, Danny C.},
+ booktitle = {Parallel Numerical Algorithms},
+ doi = {10.1007/978-94-011-5412-3_5},
+ isbn = {978-94-011-5412-3},
+ pages = {119--165},
+ publisher = {Springer Netherlands},
+ title = {Implicitly Restarted Arnoldi/Lanczos Methods for Large Scale Eigenvalue Calculations},
+ url = {https://doi.org/10.1007/978-94-011-5412-3_5},
+ year = {1997}
 }
 
 @book{Spielman2019,
