updated lit review

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -517,6 +517,15 @@ observed, modeled, and satellite-derived {PM2.5}},
  year = {2020}
 }
 
+@misc{Defferrard2017,
+ archiveprefix = {arXiv},
+ author = {Defferrard, Michaal and Bresson, Xavier and Vandergheynst, Pierre},
+ eprint = {1606.09375},
+ primaryclass = {cs.LG},
+ title = {Convolutional Neural Networks on Graphs with Fast Localized Spectral Filtering},
+ year = {2017}
+}
+
 @book{Demmel1997,
  address = {Philadelphia},
  author = {Demmel, James W.},
@@ -524,6 +533,17 @@ observed, modeled, and satellite-derived {PM2.5}},
  publisher = {Society for Industrial and Applied Mathematics},
  title = {Applied numerical linear algebra},
  year = {1997}
+}
+
+@article{Deng2023,
+ author = {Deng, Xiaowu and Shi, Yuanquan and Yao, Dunhong},
+ doi = {10.1007/s10489-023-04538-z},
+ journal = {Applied Intelligence},
+ month = {April},
+ publisher = {Springer Science and Business Media {LLC}},
+ title = {Theories,  algorithms and applications in tensor learning},
+ url = {https://doi.org/10.1007/s10489-023-04538-z},
+ year = {2023}
 }
 
 @article{DeResende2020,
@@ -761,6 +781,18 @@ and Robardet, C{\'e}line},
  url = {https://doi.org/10.1109/ICASSP.2015.7178573},
  volume = {},
  year = {2015}
+}
+
+@article{Gama2020,
+ author = {Gama, Fernando and Isufi, Elvin and Leus, Geert and Ribeiro, Alejandro},
+ doi = {10.1109/MSP.2020.3016143},
+ journal = {IEEE Signal Processing Magazine},
+ number = {6},
+ pages = {128-138},
+ title = {Graphs, Convolutions, and Neural Networks: From Graph Filters to Graph Neural Networks},
+ url = {https://doi.org/10.1109/MSP.2020.3016143},
+ volume = {37},
+ year = {2020}
 }
 
 @article{Gao2012,
@@ -1289,6 +1321,15 @@ Vijay and Riley, Patrick},
  url = {https://doi.org/https://doi.org/10.1002/1099-128X(200005/06)14:3<105::AID-CEM582>3.0.CO;2-I},
  volume = {14},
  year = {2000}
+}
+
+@misc{Kipf2017,
+ archiveprefix = {arXiv},
+ author = {Kipf, Thomas N. and Welling, Max},
+ eprint = {1609.02907},
+ primaryclass = {cs.LG},
+ title = {Semi-Supervised Classification with Graph Convolutional Networks},
+ year = {2017}
 }
 
 @book{Kolaczyk2009,
@@ -1909,6 +1950,18 @@ green bond instrument returns},
  year = {2019}
 }
 
+@inproceedings{Rimleanscaia2020,
+ author = {Rimleanscaia, Oxana and Isufi, Elvin},
+ booktitle = {2020 54th Asilomar Conference on Signals, Systems, and Computers},
+ doi = {10.1109/IEEECONF51394.2020.9443317},
+ number = {},
+ pages = {736-740},
+ title = {Rational Chebyshev Graph Filters},
+ url = {https://doi.org/10.1109/IEEECONF51394.2020.9443317},
+ volume = {},
+ year = {2020}
+}
+
 @book{Rivlin2020,
  author = {Rivlin, T.J.},
  isbn = {9780486842332},
@@ -2297,6 +2350,18 @@ and Warmuth, Manfred K.},
  year = {2020}
 }
 
+@inproceedings{Tseng2020,
+ author = {Tseng, Chien-Cheng},
+ booktitle = {2020 IEEE REGION 10 CONFERENCE (TENCON)},
+ doi = {10.1109/TENCON50793.2020.9293870},
+ number = {},
+ pages = {247-250},
+ title = {Rational Graph Filter Design Using Spectral Transformation and IIR Digital Filter},
+ url = {https://doi.org/10.1109/TENCON50793.2020.9293870},
+ volume = {},
+ year = {2020}
+}
+
 @article{Venkitaraman2019,
  author = {Venkitaraman, Arun and Chatterjee, Saikat and Händel, Peter},
  doi = {10.1109/TSIPN.2019.2936358},
@@ -2455,6 +2520,18 @@ and Warmuth, Manfred K.},
  year = {2012}
 }
 
+@article{Xiao2021,
+ author = {Xiao, Zhenlong and Fang, He and Wang, Xianbin},
+ doi = {10.1109/JIOT.2020.3024763},
+ journal = {IEEE Internet of Things Journal},
+ number = {5},
+ pages = {3812-3821},
+ title = {Anomalous IoT Sensor Data Detection: An Efficient Approach Enabled by Nonlinear Frequency-Domain Graph Analysis},
+ url = {https://doi.org/10.1109/JIOT.2020.3024763},
+ volume = {8},
+ year = {2021}
+}
+
 @article{Xiu2022,
  author = {Xiu, Cong and Sun, Yichen and Peng, Qiyuan},
  doi = {10.1016/j.jrtpm.2022.100342},
@@ -2477,6 +2554,17 @@ and Warmuth, Manfred K.},
  url = {https://doi.org/10.1109/TPWRD.2021.3135075},
  volume = {37},
  year = {2022}
+}
+
+@techreport{Zhang2015,
+ author = {Zhang, Cha and Florencio, Dinei and Chou, Philip A.},
+ institution = {Microsoft Research},
+ month = {April},
+ number = {MSR-TR-2015-31},
+ publisher = {Microsoft Research},
+ title = {Graph Signal Processing - A Probabilistic Framework},
+ url = {https://www.microsoft.com/en-us/research/publication/graph-signal-processing-a-probabilistic-framework/},
+ year = {2015}
 }
 
 @article{Zhang2017,
