spelling and grammar check

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -206,6 +206,18 @@ and Singer, Yoram},
  year = {2004}
 }
 
+@inproceedings{Belkin2004b,
+ author = {Belkin, M. and Matveeva, I. and Niyogi, P.},
+ booktitle = {2004 IEEE International Conference on Acoustics, Speech, and Signal Processing},
+ doi = {10.1109/ICASSP.2004.1326716},
+ number = {},
+ pages = {iii-1000},
+ title = {Tikhonov regularization and semi-supervised learning on large graphs},
+ url = {https://doi.org/10.1109/ICASSP.2004.1326716},
+ volume = {3},
+ year = {2004}
+}
+
 @book{Bhatia1997,
  address = {New York},
  author = {Bhatia, Rajendra},
@@ -337,6 +349,18 @@ and Li, Xuelong},
  title = {A Lower Bound for the Smallest Eigenvalue of the Laplacian},
  url = {https://doi.org/doi:10.1515/9781400869312-013},
  year = {1971}
+}
+
+@article{Chen2015,
+ author = {Chen, Siheng and Sandryhaila, Aliaksei and Moura, José M. F. and Kovačević, Jelena},
+ doi = {10.1109/TSP.2015.2441042},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {17},
+ pages = {4609-4624},
+ title = {Signal Recovery on Graphs: Variation Minimization},
+ url = {https://doi.org/10.1109/TSP.2015.2441042},
+ volume = {63},
+ year = {2015}
 }
 
 @article{Cheng2021,
@@ -1518,6 +1542,18 @@ https://doi.org/10.1137/07070111X},
  year = {1980}
 }
 
+@article{Marques2016,
+ author = {Marques, Antonio G. and Segarra, Santiago and Leus, Geert and Ribeiro, Alejandro},
+ doi = {10.1109/TSP.2015.2507546},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {7},
+ pages = {1832-1843},
+ title = {Sampling of Graph Signals With Successive Local Aggregations},
+ url = {https://doi.org/10.1109/TSP.2015.2507546},
+ volume = {64},
+ year = {2016}
+}
+
 @article{Marques2020,
  author = {Marques, Antonio G. and Segarra, Santiago and Mateos, Gonzalo},
  doi = {10.1109/MSP.2020.3014597},
@@ -1658,17 +1694,18 @@ Measuring Ecological Statistics},
  year = {2013}
 }
 
-@inproceedings{Narang2013b,
- author = {Narang, Sunil K and Gadde, Akshay and Ortega, Antonio},
- booktitle = {2013 IEEE International Conference on Acoustics, Speech and Signal Processing},
- doi = {10.1109/ICASSP.2013.6638704},
+@inproceedings{Narang2013c,
+ author = {Narang, Sunil K and Gadde, Akshay and Sanou, Eduard and Ortega, Antonio},
+ booktitle = {2013 IEEE Global Conference on Signal and Information Processing},
+ doi = {10.1109/GlobalSIP.2013.6736922},
  number = {},
- pages = {5445-5449},
- title = {Signal processing techniques for interpolation in graph structured data},
- url = {https://doi.org/10.1109/ICASSP.2013.6638704},
+ pages = {491-494},
+ title = {Localized iterative methods for interpolation in graph structured data},
+ url = {https://doi.org/10.1109/GlobalSIP.2013.6736922},
  volume = {},
  year = {2013}
 }
+
 
 @article{Nelder1972,
  author = {Nelder, J. A. and Wedderburn, R. W. M. },
@@ -2360,6 +2397,18 @@ and Warmuth, Manfred K.},
  url = {https://doi.org/10.1109/TENCON50793.2020.9293870},
  volume = {},
  year = {2020}
+}
+
+@inproceedings{Varma2015,
+ author = {Varma, Rohan and Chen, Siheng and Kovačević, Jelena},
+ booktitle = {2015 IEEE 6th International Workshop on Computational Advances in Multi-Sensor Adaptive Processing (CAMSAP)},
+ doi = {10.1109/CAMSAP.2015.7383741},
+ number = {},
+ pages = {81-84},
+ title = {Spectrum-blind signal recovery on graphs},
+ url = {https://doi.org/10.1109/CAMSAP.2015.7383741},
+ volume = {},
+ year = {2015}
 }
 
 @article{Venkitaraman2019,
