--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -16,6 +16,7 @@
 
 \newcommand{\Diag}[1]{\text{\textup{diag}}\big(#1\big)}
 
+\newcommand{\argmin}[1]{\underset{#1}{\text{argmin}}\quad}
 
 
 \newcommand{\aand}{\quad \text{and} \quad}
