--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -819,6 +819,20 @@ and Robardet, C{\'e}line},
  year = {2020}
 }
 
+@article{Gao2010,
+ author = {Gao, Fuchang and Han, Lixing},
+ doi = {10.1007/s10589-010-9329-3},
+ journal = {Computational Optimization and Applications},
+ month = {May},
+ number = {1},
+ pages = {259--277},
+ publisher = {Springer Science and Business Media {LLC}},
+ title = {Implementing the Nelder-Mead simplex algorithm with~adaptive parameters},
+ url = {https://doi.org/10.1007/s10589-010-9329-3},
+ volume = {51},
+ year = {2010}
+}
+
 @article{Gao2012,
  author = {Gao, Fuchang and Han, Lixing},
  doi = {10.1007/s10589-010-9329-3},
@@ -1566,6 +1580,18 @@ https://doi.org/10.1137/07070111X},
  year = {2020}
 }
 
+@article{Marques2020b,
+ author = {Marques, Antonio G. and Kiyavash, Negar and Moura, José M.F. and Van De Ville, Dimitri and Willett, Rebecca},
+ doi = {10.1109/MSP.2020.3020715},
+ journal = {IEEE Signal Processing Magazine},
+ number = {6},
+ pages = {11-13},
+ title = {Graph Signal Processing: Foundations and Emerging Directions [From the Guest Editors]},
+ url = {https://doi.org/10.1109/MSP.2020.3020715},
+ volume = {37},
+ year = {2020}
+}
+
 @inbook{Marti2021,
  address = {Cham},
  author = {Marti, Gautier
@@ -1705,7 +1731,6 @@ Measuring Ecological Statistics},
  volume = {},
  year = {2013}
 }
-
 
 @article{Nelder1972,
  author = {Nelder, J. A. and Wedderburn, R. W. M. },
@@ -2124,6 +2149,18 @@ green bond instrument returns},
  primaryclass = {cs.SI},
  title = {Discrete Signal Processing on Graphs: Frequency Analysis},
  year = {2013}
+}
+
+@article{Sandryhaila2014,
+ author = {Sandryhaila, Aliaksei and Moura, Jose M.F.},
+ doi = {10.1109/MSP.2014.2329213},
+ journal = {IEEE Signal Processing Magazine},
+ number = {5},
+ pages = {80-90},
+ title = {Big Data Analysis with Signal Processing on Graphs: Representation and processing of massive data sets with irregular structure},
+ url = {https://doi.org/10.1109/MSP.2014.2329213},
+ volume = {31},
+ year = {2014}
 }
 
 @article{Sardellitti2017,
@@ -2569,6 +2606,20 @@ and Warmuth, Manfred K.},
  year = {2012}
 }
 
+@article{West2022,
+ author = {West, Robert M},
+ doi = {10.1177/00045632211050531},
+ eprint = { 
+https://doi.org/10.1177/00045632211050531},
+ journal = {Annals of Clinical Biochemistry},
+ number = {3},
+ pages = {162-165},
+ title = {Best practice in statistics: The use of log transformation},
+ url = {https://doi.org/10.1177/00045632211050531},
+ volume = {59},
+ year = {2022}
+}
+
 @article{Xiao2021,
  author = {Xiao, Zhenlong and Fang, He and Wang, Xianbin},
  doi = {10.1109/JIOT.2020.3024763},
@@ -2654,18 +2705,6 @@ multilayer complex systems},
  year = {2021}
 }
 
-@misc{Zhang2022,
- author = {Zhang, Songyang and Deng, Qinwen and Ding, Zhi},
- language = {en},
- month = {October},
- publisher = {arXiv},
- shorttitle = {Signal {Processing} over {Multilayer} {Graphs}},
- title = {Signal {Processing} over {Multilayer} {Graphs}: {Theoretical} {Foundations} and {Practical} {Applications}},
- url = {http://arxiv.org/abs/2108.13638},
- urldate = {2023-03-07},
- year = {2022}
-}
-
 @article{Zhang2023,
  author = {Zhang, Shengen and Ma, Xu and Fang, Zhen and Pan, Huifeng and Yang, Guangbing and Arce, Gonzalo R.},
  doi = {10.1007/s10489-023-04563-y},
@@ -2674,6 +2713,18 @@ multilayer complex systems},
  publisher = {Springer Science and Business Media {LLC}},
  title = {Financial time series forecasting based on momentum-driven graph signal processing},
  url = {https://doi.org/10.1007/s10489-023-04563-y},
+ year = {2023}
+}
+
+@article{Zhang2023b,
+ author = {Zhang, Songyang and Deng, Qinwen and Ding, Zhi},
+ doi = {10.1109/JIOT.2023.3294470},
+ journal = {IEEE Internet of Things Journal},
+ number = {},
+ pages = {1-1},
+ title = {Signal Processing over Multilayer Graphs: Theoretical Foundations and Practical Applications},
+ url = {https://doi.org/10.1109/JIOT.2023.3294470},
+ volume = {},
  year = {2023}
 }
 
