--- a/Setup/packages.tex
+++ b/Setup/packages.tex
@@ -9,7 +9,8 @@
             wrapfig, 
             makecell, 
             bm, 
-            multicol}
+            multicol,
+            placeins}
 
 \usepackage[table]{xcolor}
 
